--- a/src/main/resources/openshift/route.yaml
+++ b/src/main/resources/openshift/route.yaml
@@ -2,6 +2,7 @@ kind: Route
 apiVersion: route.openshift.io/v1
 metadata:
   name: caj-fare
+  namespace: caj-fare
 spec:
   host: caj-fare-${STUDENT_ID}.apps.penguin.rhtw.kubedev.org
   to:
