--- a/src/main/resources/openshift/service.yaml
+++ b/src/main/resources/openshift/service.yaml
@@ -2,6 +2,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: caj-fare
+  namespace: caj-fare
   labels:
     app: caj-fare
     service: caj-fare
