--- a/src/main/resources/openshift/deployment.yaml
+++ b/src/main/resources/openshift/deployment.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
         - name: caj-fare
-          image: 'image-registry.openshift-image-registry.svc:5000/caj/caj-fare:latest'
+          image: 'image-registry.openshift-image-registry.svc:5000/caj-fare/caj-fare:latest'
           ports:
             - containerPort: 8080
               protocol: TCP
