--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,13 +6,13 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
-  sleuth:
-    otel:
-      config:
-        trace-id-ratio-based: 1.0
-      exporter:
-        otlp:
-          endpoint: ${JAEGER_URI:http://jaeger-collector.istio-system.svc.cluster.local:4317}
+  # sleuth:
+  #   otel:
+  #     config:
+  #       trace-id-ratio-based: 1.0
+  #     exporter:
+  #       otlp:
+  #         endpoint: ${JAEGER_URI:http://jaeger-collector.istio-system.svc.cluster.local:4317}
 management:
   endpoints:
     web:
