--- a/src/main/resources/openshift/deployment.yaml
+++ b/src/main/resources/openshift/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: caj-fare
-          image: 'image-registry.openshift-image-registry.svc:5000/caj-fare/caj-fare'
+          image: 'docker.io/dennischou/caj-fare:v1.7'
           ports:
             - containerPort: 8080
               protocol: TCP
