--- a/src/main/resources/openshift/deployment.yaml
+++ b/src/main/resources/openshift/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: caj-fare
-          image: 'docker.io/dennischou/caj-fare:v1.10'
+          image: 'quay.io/wksp/caj-fare-userx:v1.0'
           ports:
             - containerPort: 8080
               protocol: TCP
