--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'io.grpc:grpc-okhttp:1.50.0'
 	implementation 'io.micrometer:micrometer-registry-prometheus'
+	implementation('org.springframework.cloud:spring-cloud-starter-sleuth') {exclude group: 'org.springframework.cloud', module: 'spring-cloud-sleuth-brave'}
+	implementation 'org.springframework.cloud:spring-cloud-sleuth-otel-autoconfigure'
+	implementation 'io.opentelemetry:opentelemetry-exporter-otlp-trace'
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.2.32'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -56,6 +59,7 @@ dependencies {
 dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2020.0.4"
+		mavenBom 'org.springframework.cloud:spring-cloud-sleuth-otel-dependencies:1.0.0-M12'
 	}
 }
 
