Change image for infra team enablement

--- a/src/main/resources/openshift/deployment.yaml
+++ b/src/main/resources/openshift/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: caj-fare
-          image: 'docker.io/dennischou/caj-fare:v2.0'
+          image: 'quay.io/rhtw/caj-fare:v2.1-observ'
           ports:
             - containerPort: 8080
               protocol: TCP
