--- a/src/main/resources/openshift/user_workload_configmap.yaml
+++ b/src/main/resources/openshift/user_workload_configmap.yaml
@@ -5,4 +5,9 @@ metadata:
   namespace: openshift-monitoring
 data:
   config.yaml: |
-    enableUserWorkload: true
+    prometheusK8s:
+      retention: 48h                             
+      retentionSize: 10GB
+    enableUserWorkload: true                     
+    alertmanagerMain:
+      enableUserAlertmanagerConfig: true  
